# Steganography-WebApp

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg
.githooks/: pre-commit  setup-hooks.sh
.github/workflows/: ci.yml
config/: constants.py
docs/latex/: bibliografia.bib  relazione.tex
docs/latex/parts/: abstract.tex  capitolo1_fondamenti.tex  capitolo2_algoritmi.tex  capitolo3_architettura.tex  capitolo4_implementazione.tex  capitolo5_interfaccia.tex  conclusioni.tex  frontespizio.tex  introduzione.tex
docs/reports/: REPORT_HIDE_BINARY_FILE.md  REPORT_HIDE_IMAGE.md  REPORT_HIDE_TEXT.md
src/: __init__.py
src/steganografia/: __init__.py  backup.py  bit_operations.py  core.py  file_utils.py  metrics.py  validator.py
src/steganografia/dwt/: __init__.py  binary_operations.py  image_operations.py  message_operations.py
src/steganografia/lsb/: __init__.py  binary_operations.py  image_operations.py  message_operations.py
src/steganografia/pvd/: __init__.py  binary_operations.py  image_operations.py  message_operations.py
src/ui/: __init__.py  components.py  hide_pages.py  image_utils.py  layout.py  recover_pages.py  styles.py
