[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steganography-webapp"
version = "1.0.0"
description = "Advanced steganography web application with LSB, DWT, and PVD methods"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Giuseppe Bellamacina"}
]
keywords = ["steganography", "image-processing", "dwt", "pvd", "lsb", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "streamlit>=1.20.0",
    "numpy>=1.24.0",
    "Pillow>=9.5.0",
    "PyWavelets>=1.4.0",
    "scikit-image>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/GiuseppeBellamacina/Steganography-WebApp"
Repository = "https://github.com/GiuseppeBellamacina/Steganography-WebApp"
Issues = "https://github.com/GiuseppeBellamacina/Steganography-WebApp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "config"]

